[gd_scene load_steps=8 format=3 uid="uid://cruaq7v8jnqqx"]

[ext_resource type="Script" path="res://src/soil.gd" id="1_ifag8"]
[ext_resource type="PackedScene" uid="uid://h6jvspaio76m" path="res://src/plant.tscn" id="2_m6mq1"]
[ext_resource type="Texture2D" uid="uid://b0pak6fxyh20b" path="res://art/crops-v2/empty-soil.png" id="7_xkf7d"]
[ext_resource type="Texture2D" uid="uid://cx8ujmvjfytdh" path="res://art/dialog-water.png" id="8_h53y1"]
[ext_resource type="PackedScene" uid="uid://bpsa32njlgavo" path="res://src/UI/plant_tending_ui.tscn" id="9_mnobs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qqeji"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jilpf"]
radius = 16.0

[node name="Soil" type="StaticBody2D"]
y_sort_enabled = true
collision_layer = 2
collision_mask = 5
input_pickable = true
script = ExtResource("1_ifag8")
contains = ExtResource("2_m6mq1")

[node name="shape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_qqeji")

[node name="soil" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -4)
texture = ExtResource("7_xkf7d")

[node name="needwater" type="Sprite2D" parent="."]
position = Vector2(25, -23)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_h53y1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_jilpf")

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="PlantUI" parent="UI" instance=ExtResource("9_mnobs")]
visible = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed_debug" from="UI/PlantUI" to="." method="_on_bug_button_pressed"]
[connection signal="pressed_harvest" from="UI/PlantUI" to="." method="_on_harvest_button_pressed"]
[connection signal="pressed_seed" from="UI/PlantUI" to="." method="_on_plantseed_button_pressed"]
[connection signal="pressed_water" from="UI/PlantUI" to="." method="_on_water_button_pressed"]
